# testing-python

./: .coveragerc.toml  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
projects/document_formats/src/document_formats/: example-01.json  example-02.json5  example-05.jsonl  example-06.yaml  example-07.yaml
projects/duckdb_parsing/: pyproject.toml
projects/github_reports/: .gitignore
projects/github_reports/src/github_reports/: __main__.py
projects/github_reports/src/github_reports/queries/: organisation-repositories.graphql  organisation.graphql  repository-branches.graphql  repository.graphql  user.graphql
projects/github_reports/tests/: test__utils.py
projects/rich_cli/: pyproject.toml
projects/rich_cli/src/rich_cli/: main.py
projects/testing_async/: pyproject.toml
projects/testing_avro/src/testing_avro/: duckdb.py  main.py
projects/testing_avro/src/testing_avro/schemas/: user-v2.avsc
projects/testing_cython/: pyproject.toml
projects/testing_cython/src/testing_cython/: cythonisation.pyi  cythonisation.pyx  main.py  pure_python.py  setup.py
projects/testing_dbml/: README.md  pyproject.toml
projects/testing_dbml/src/testing_dbml/schemas/: example-project.dbml
projects/testing_duckdb_quack/: pyproject.toml
projects/testing_duckdb_quack/src/testing_duckdb_quack/: main.py
projects/testing_jinja/: pyproject.toml
projects/testing_jinja/src/testing_jinja/: main.py
projects/testing_loading_bar/: pyproject.toml
projects/testing_loading_bar/src/testing_loading_bar/: approach_1.py  approach_2.py
projects/testing_orc/: pyproject.toml
projects/testing_orc/src/testing_orc/: main.py
projects/testing_redis/: pyproject.toml
projects/testing_redis/src/testing_redis/: docker-compose.yaml
projects/testing_redis/src/testing_redis/clients/: client-0.redis  client-1.redis  client-2.redis
projects/testing_sqlglot/src/testing_sqlglot/: convert_sql_files.py  validate_llm_sql.py
projects/testing_sqlglot/src/testing_sqlglot/models/domain/subdir/: model_2.sql
projects/testing_struct/src/testing_struct/: main.py
projects/yaml_parsing/src/yaml_parsing/scalars/: ahoy.yaml  real-example.yaml
projects/yaml_parsing/src/yaml_parsing/tags/: bools-tagged.yaml  bools.yaml  python-tag.yaml  set-and-omap.yaml  versioned-1.2.yaml
src/document_formats/: example-03.jsonl  example-04.yaml  pyproject.toml
src/duckdb_parsing/: main.py  repayments.csv
src/github_reports/: __main__.py  client.py  pyproject.toml  report.sql  reports.py  utils.py
src/github_reports/queries/: organisation-teams.graphql  repository-pull-requests.graphql  user-repositories.graphql
src/testing_async/: main.py  pyproject.toml
src/testing_avro/: duckdb.py  main.py  pyproject.toml  query.sql
src/testing_avro/schemas/: model.avsc  user-v3.avsc
src/testing_cython/: .gitignore  main.py  pyproject.toml  setup.py
src/testing_dbml/: __init__.py
src/testing_dlt/: commands.sh  github_pipeline.py  jira_pipeline.py  jira_rest_api_pipeline.py
src/testing_dlt/.dlt/: config.toml
src/testing_dlt/github/: __init__.py  api.http  helpers.py  queries.py
src/testing_dlt/jira/: __init__.py  api.py  settings.py
src/testing_jinja/: example.sql
src/testing_nocodb/: docker-compose.yaml  pyproject.toml
src/testing_orc/: main.py
src/testing_redis/: main.py
src/testing_sqlglot/: convert_sql_files.py  pyproject.toml  validate_llm_sql.py
src/testing_sqlglot/models/staging/: model_1.sql
src/testing_struct/: example.fwf  pyproject.toml
src/yaml_parsing/: pyproject.toml
src/yaml_parsing/scalars/: main.py
src/yaml_parsing/tags/: main.py  versioned-1.1.yaml
tools/: add.py  pyproject.toml
tools/src/hooks/: lint_coverage.py
tools/src/tools/: add.py
