# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[project]
name = "tools"
version = "0.0.0"
dependencies = [
    "tomlkit>=0.15.0",
]

[project.scripts]
lint-coverage = "hooks.lint_coverage:main"

[build-system]
requires = ["uv_build>=0.8"]
build-backend = "uv_build"


[tool.uv.build-backend]
namespace = true
module-root = "src"
module-name = [
    "hooks",
    "tools",
]
