# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[project]
name = "tools"
version = "0.0.0"
dependencies = [
    "tomlkit>=0.15.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"


[tool.uv.build-backend]
namespace = true
module-root = "src"
module-name = ["tools"]
